# agent-memory-substrate-demo

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
agent_memory_substrate/: __init__.py  control_reports.py  demo.py  models.py  scoring.py  substrate.py
docs/: public-proof-map.md
examples/: memory.md  working_context.json
examples/control_reports/: memory_control_report.json
examples/episodic/: session-message.json  session-search.json  snapshot.json  state-db-session.json
examples/procedures/: paper-trial-runbook.md  profile-map.json  sandbox-review.md
examples/research_ideas/: stale-note.json
examples/semantic/: canonical-review-boundary.md  fact-store-record.json  profile-catalog.json  role-memory-index.json
examples/tool_traces/: ingestion-run.json
examples/vault/: research-vectorization-notes.md  restricted-strategy-note.md  sandbox-strategy-review.md
schemas/: memory_control_report.json
tests/: test_control_reports.py  test_substrate.py
