[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory-substrate-demo"
version = "0.1.0"
description = "Harness-agnostic role-scoped memory and retrieval substrate demo"
readme = "README.md"
license = "MIT"
authors = [{name = "Daniel Williford"}]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_memory_substrate*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"

[tool.ruff]
line-length = 100
src = ["agent_memory_substrate", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
